package com.example.nalinbankfx;

public class Configs {
    protected String dbHost = "localhost";
    protected String dbPort = "3306";
    protected String dbUser = "root";
    protected String dbPass = "nalin94541955546A";
    protected String dbName = "bank";
}
