package com.example.nalinbankfx;

public class Const {
    public static final String USER_TABLE = "users";

    public static final String USERS_ID = "ac_no";
    public static final String USERS_USERNAME = "username";
    public static final String USER_BALANCE = "balance";
    public static final String USERS_PASSWORD = "password";
    public static final String USERS_MAIL = "mail";
    public static final String USERS_FIRSTNAME = "firstname";
    public static final String USERS_LASTNAME = "lastname";
    public static final String USERS_GENDER = "gender";

}
